--- a/public/index.html
+++ b/public/index.html
@@ -57,52 +57,52 @@
   </grid>
   <grid columns="4" columns-sm="1" gap="8" class="index__posts"><grid-cell >
         <figure>
-        <img src="240216_pxshdr/pxshdr.png"/><figcaption>
+        <img loading="lazy" src="240216_pxshdr/pxshdr@thumbnail.png" alt="PXSHDR" /><figcaption>
               PXSHDR (2024) /  Camera image to grid of characters or shapes
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
-        <img src="231222_gentil35/gentil35.jpg"/><figcaption>
+        <img loading="lazy" src="231222_gentil35/gentil35@thumbnail.jpg" alt="Gentil 35" /><figcaption>
               Gentil 35 (2023) /  Poster for a party
             </figcaption></figure>
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
-        <img src="230301_joandrawedding/joandra-wedding.jpg"/><figcaption>
+        <img loading="lazy" src="230301_joandrawedding/joandra-wedding@thumbnail.jpg" alt="Wedding site" /><figcaption>
               Wedding site (2023) /  One-page web app with cart, payment integration and RSVP form
             </figcaption></figure>
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
-        <img src="230121_strktr/strktr.png"/><figcaption>
+        <img loading="lazy" src="230121_strktr/strktr@thumbnail.png" alt="STRKTR" /><figcaption>
               STRKTR (2023) /  Displaced cirlces probability-based composition generator
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
-        <img src="221118_gustavobertoniportugal/gustavobertoniportugal-19.jpg"/><figcaption>
+        <img loading="lazy" src="221118_gustavobertoniportugal/gustavobertoniportugal-19@thumbnail.jpg" alt="Gustavo Bertoni Portugal mini tour" /><figcaption>
               Gustavo Bertoni Portugal mini tour (2022) /  Posters for artist&#39;s concerts
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
-        <img src="221013_jayhorsthtomleerichards/jayhorsthtomleerichards.jpg"/><figcaption>
+        <img loading="lazy" src="221013_jayhorsthtomleerichards/jayhorsthtomleerichards@thumbnail.jpg" alt="Jay Horsth, Tom Lee Richards @ A Obra" /><figcaption>
               Jay Horsth, Tom Lee Richards @ A Obra (2022) /  Concert digital poster
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
-        <img src="220926_thalesiqueiraespelhos/thalesiqueiraespelhos.jpg"/><figcaption>
+        <img loading="lazy" src="220926_thalesiqueiraespelhos/thalesiqueiraespelhos@thumbnail.jpg" alt="Thales Siqueira, Espelhos" /><figcaption>
               Thales Siqueira, Espelhos (2022) /  Series of posters to promote album
             </figcaption></figure>
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
-        <img src="220422_songbook/songbook.jpg"/><figcaption>
+        <img loading="lazy" src="220422_songbook/songbook@thumbnail.jpg" alt="The Great LaTeX Songbook" /><figcaption>
               The Great LaTeX Songbook (2022) /  Multi-instrument songbook generator
             </figcaption></figure>
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
-        <img src="220122_jaysolitude/jaysolitude.jpg"/><figcaption>
+        <img loading="lazy" src="220122_jaysolitude/jaysolitude@thumbnail.jpg" alt="Jay Horsth Solitude Tour" /><figcaption>
               Jay Horsth Solitude Tour (2022) /  Series of iterative posters for artist&#39;s tour
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
-        <img src="210925_malkmus/malkmus.jpg"/><figcaption>
+        <img loading="lazy" src="210925_malkmus/malkmus@thumbnail.jpg" alt="Stephen Malkmus &amp; The Jicks, The John Candy, Valv &#43; Câmera @ Granfino&#39;s" /><figcaption>
               Stephen Malkmus &amp; The Jicks, The John Candy, Valv &#43; Câmera @ Granfino&#39;s (2021) /  Comissioned poster remake
             </figcaption></figure>
       </grid-cell></grid>
