content: add meta page and new project

--- a/public/240216_dynamicgo/index.html
+++ b/public/240216_dynamicgo/index.html
@@ -71,5 +71,9 @@ func main () {
   fmt.Println(s) // New string
 }</code></pre>
 </div>
+    <footer class="wrapper">
+      &#127279; 2024<br>
+      <a href="/meta">Meta</a>
+    </footer>
   </body>
 </html>
