--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <grid-cell span="4" span-sm="row">
       <h1>João Pesce</h1>
       <p>
-        Curiosity-driven, detail-oriented creator of digital products. Every day fighting chaos.
+        Curiosity-driven, detail-oriented creator of digital artefacts. Every day fighting chaos.
       </p>
     </grid-cell>
     <grid-cell span="8" span-sm="row" columns="2" columns-sm="1" class="index__bio">
@@ -56,6 +56,11 @@
     </grid-cell>
   </grid>
   <grid columns="4" columns-sm="1" gap="8" class="index__posts"><grid-cell >
+        <figure>
+        <img loading="lazy" src="240307_noitedeminas/noitedeminas@thumbnail.jpg" alt="ジョタ, 江利川侑介 ＆ Willie (DJ) @ ノースマリンドライブ" /><figcaption>
+              ジョタ, 江利川侑介 ＆ Willie (DJ) @ ノースマリンドライブ (2024) /  Music event in Shibuya
+            </figcaption></figure>
+      </grid-cell><grid-cell >
         <figure>
         <img loading="lazy" src="240216_pxshdr/pxshdr@thumbnail.png" alt="PXSHDR" /><figcaption>
               PXSHDR (2024) /  Camera image to grid of characters or shapes
@@ -107,5 +112,9 @@
             </figcaption></figure>
       </grid-cell></grid>
 </div>
+    <footer class="wrapper">
+      &#127279; 2024<br>
+      <a href="/meta">Meta</a>
+    </footer>
   </body>
 </html>
