fix: fix images in content
Fix src attributes in HTML by adding the correct prefix

--- a/public/meta/index.html
+++ b/public/meta/index.html
@@ -30,7 +30,7 @@
       <div class="prose markdowncontent">
   <h1 id="meta">Meta</h1>
 <figure>
-<img src="van-de-graff-generator-patent.jpg"
+<img src="/meta/van-de-graff-generator-patent.jpg"
 alt="Van De Graff electrostatic generator patent US581499A from 1931" />
 <figcaption aria-hidden="true">Van De Graff electrostatic generator
 patent US581499A from 1931</figcaption>
@@ -127,12 +127,12 @@ controller in the <a
 href="https://wiki.c2.com/?WhatsaControllerAnyway">modern understading
 of the MVC architecture</a>.</p>
 <figure>
-<img src="diagram-horizontal.svg" title="High-level overview of miu"
+<img src="/meta/diagram-horizontal.svg" title="High-level overview of miu"
 class="desktop-only" alt="A high-level overview of miu" />
 <figcaption aria-hidden="true">A high-level overview of miu</figcaption>
 </figure>
 <figure>
-<img src="diagram-vertical.svg" title="High-level overview of miu"
+<img src="/meta/diagram-vertical.svg" title="High-level overview of miu"
 class="mobile-only" alt="A high-level overview of miu" />
 <figcaption aria-hidden="true">A high-level overview of miu</figcaption>
 </figure>
