content: update meta

--- a/public/240216_dynamicgo/index.html
+++ b/public/240216_dynamicgo/index.html
@@ -72,7 +72,7 @@ func main () {
 }</code></pre>
 </div>
     <footer class="wrapper">
-      &#127279; 2024<br>
+      <span class="copyleft">©</span> 2024<br>
       <a href="/meta">Meta</a>
     </footer>
   </body>
