--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
       </grid-cell></grid>
 </div>
     <footer class="wrapper">
-      &#127279; 2024<br>
+      <span class="copyleft">©</span> 2024<br>
       <a href="/meta">Meta</a>
     </footer>
   </body>
