--- a/public/meta/index.html
+++ b/public/meta/index.html
@@ -56,8 +56,8 @@ href="https://frankchimero.com/blog/2018/everything-easy/">too damn
 complex</a> and I have a hunch that some developers have no idea what’s
 going on behind the curtains a lot of the times. By creating your own
 tools, you are able to gain an clearer understanding of the process and
-possibly cultivate both an appreciation and criticism for other
-toolchains.</li>
+possibly cultivate both an appreciation and criticism for other tool
+chains.</li>
 <li>Don’t go full bare-bones. Maintaining a moderately complex website
 in pure HTML/CSS may prove to be a suicidal task.</li>
 </ol>
@@ -124,7 +124,7 @@ easy migration and enhanced longevity. Templates provide both a way to
 reuse sections such as the header and a way to generate special pages
 such as the index. The build pipeline orchestrate things acting like the
 controller in the <a
-href="https://wiki.c2.com/?WhatsaControllerAnyway">modern understading
+href="https://wiki.c2.com/?WhatsaControllerAnyway">modern understanding
 of the MVC architecture</a>.</p>
 <figure>
 <img src="/meta/diagram-horizontal.svg" title="High-level overview of miu"
@@ -138,7 +138,7 @@ class="mobile-only" alt="A high-level overview of miu" />
 </figure>
 <p>Step by step:</p>
 <ol type="1">
-<li>Assets such as stylesheets, favicons and global images are copied
+<li>Assets such as style sheets, favicons and global images are copied
 directly</li>
 <li>Markdown content is compiled to HTML and placed in their
 templates</li>
@@ -158,10 +158,18 @@ language. Making simple things that would be trivial in other
 programming languages felt like a struggle. But I’d love to tackle that
 again some day.
 </dd>
+<dt>What if I don’t want to create my own generator?</dt>
+<dd>
+There are great projects out there such as <a
+href="https://jekyllrb.com/">Jekyll (Ruby)</a>, <a
+href="https://gohugo.io/">Hugo (Go)</a>, <a
+href="https://www.11ty.dev/">11ty (Javascript)</a>, <a
+href="https://getpelican.com/">Pelican (Python)</a>.
+</dd>
 </dl>
 </div>
     <footer class="wrapper">
-      &#127279; 2024<br>
+      <span class="copyleft">©</span> 2024<br>
       <a href="/meta">Meta</a>
     </footer>
   </body>
