--- a/public/colophon/index.html
+++ b/public/colophon/index.html
@@ -1,36 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Meta</title>
-    <meta property="description" content="Curiosity-driven, detail-oriented creator of digital products. Every day fighting chaos." />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Colophon</title>
+    <meta
+      property="description"
+      content="Curiosity-driven, detail-oriented creator of digital products. Every day fighting chaos."
+    />
     <meta property="og:title" content="|||||" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://pesce.cc/images/ogimage.jpg" />
-    <meta property="og:description" content="Curiosity-driven, detail-oriented creator of digital products. Every day fighting chaos." />
-    <link rel="icon" href="/images/favicon.png">
-    <link rel="stylesheet" href="/style/|||||.css">
+    <meta
+      property="og:description"
+      content="Curiosity-driven, detail-oriented creator of digital products. Every day fighting chaos."
+    />
+    <link rel="icon" href="/images/favicon.png" />
+    <link rel="stylesheet" href="/style/|||||.css" />
   </head>
   <body>
     <header>
       <a href="/">
-        <svg width="22" viewBox="0 0 16 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg
+          width="22"
+          viewBox="0 0 16 18"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
           <g clip-path="url(#clip0_33_3)">
-            <path d="M0 0V18H1.56176V1.64958C1.56176 0.739612 0.859686 0 0 0ZM4.19814 0C3.76829 0 3.41964 0.369806 3.41964 0.822715V17.1731C3.41964 17.6302 3.76829 17.9958 4.19814 17.9958C4.62798 17.9958 4.97663 17.626 4.97663 17.1731V0.822715C4.97663 0.365651 4.62798 0 4.19814 0ZM10.2541 1.64958V16.3504C10.2541 17.2604 10.9514 18 11.8159 18V0C10.9562 0 10.2541 0.739612 10.2541 1.64958ZM14.4523 0C14.0224 0 13.6738 0.369806 13.6738 0.822715V17.1731C13.6738 17.6302 14.0224 17.9958 14.4523 17.9958C14.8821 17.9958 15.2308 17.626 15.2308 17.1731V0.822715C15.2308 0.365651 14.8821 0 14.4523 0ZM6.83451 1.64958V18C7.69419 18 8.39627 17.2604 8.39627 16.3504V0C7.53658 0 6.83451 0.739612 6.83451 1.64958Z" fill="black"/>
+            <path
+              d="M0 0V18H1.56176V1.64958C1.56176 0.739612 0.859686 0 0 0ZM4.19814 0C3.76829 0 3.41964 0.369806 3.41964 0.822715V17.1731C3.41964 17.6302 3.76829 17.9958 4.19814 17.9958C4.62798 17.9958 4.97663 17.626 4.97663 17.1731V0.822715C4.97663 0.365651 4.62798 0 4.19814 0ZM10.2541 1.64958V16.3504C10.2541 17.2604 10.9514 18 11.8159 18V0C10.9562 0 10.2541 0.739612 10.2541 1.64958ZM14.4523 0C14.0224 0 13.6738 0.369806 13.6738 0.822715V17.1731C13.6738 17.6302 14.0224 17.9958 14.4523 17.9958C14.8821 17.9958 15.2308 17.626 15.2308 17.1731V0.822715C15.2308 0.365651 14.8821 0 14.4523 0ZM6.83451 1.64958V18C7.69419 18 8.39627 17.2604 8.39627 16.3504V0C7.53658 0 6.83451 0.739612 6.83451 1.64958Z"
+              fill="black"
+            />
           </g>
           <defs>
             <clipPath id="clip0_33_3">
-              <rect width="15.2308" height="18" fill="white"/>
+              <rect width="15.2308" height="18" fill="white" />
             </clipPath>
           </defs>
         </svg>
       </a>
     </header>
-      <div class="prose markdowncontent">
-  <h1 id="meta">Meta</h1>
+    <div class="prose markdowncontent">
+  <h1 id="colophon">Colophon</h1>
 <figure>
-<img src="/meta/van-de-graff-generator-patent.jpg"
+<img src="/colophon/van-de-graff-generator-patent.jpg"
 alt="Van De Graff electrostatic generator patent US581499A from 1931" />
 <figcaption aria-hidden="true">Van De Graff electrostatic generator
 patent US581499A from 1931</figcaption>
@@ -127,12 +141,12 @@ controller in the <a
 href="https://wiki.c2.com/?WhatsaControllerAnyway">modern understanding
 of the MVC architecture</a>.</p>
 <figure>
-<img src="/meta/diagram-horizontal.svg" title="High-level overview of miu"
+<img src="/colophon/diagram-horizontal.svg" title="High-level overview of miu"
 class="desktop-only" alt="A high-level overview of miu" />
 <figcaption aria-hidden="true">A high-level overview of miu</figcaption>
 </figure>
 <figure>
-<img src="/meta/diagram-vertical.svg" title="High-level overview of miu"
+<img src="/colophon/diagram-vertical.svg" title="High-level overview of miu"
 class="mobile-only" alt="A high-level overview of miu" />
 <figcaption aria-hidden="true">A high-level overview of miu</figcaption>
 </figure>
@@ -166,11 +180,22 @@ href="https://gohugo.io/">Hugo (Go)</a>, <a
 href="https://www.11ty.dev/">11ty (Javascript)</a>, <a
 href="https://getpelican.com/">Pelican (Python)</a>.
 </dd>
+<dt>How do people usually do this?</dt>
+<dd>
+Every site is different – and that’s the beauty of it. Here are some
+interesting approaches other people have taken: <a
+href="https://qubyte.codes/colophon">qubyte</a> has a great philosophy
+of keeping things simple; <a
+href="https://wiki.xxiivv.com/site/about.html">Devine Lu Linvega</a>’s
+site is highly aligned with the way they build software; <a
+href="https://indieweb.org/colophon">IndieWeb’s colophon</a> page is
+also a great resource for everything colophon.
+</dd>
 </dl>
 </div>
     <footer class="wrapper">
-      <span class="copyleft">©</span> 2024<br>
-      <a href="/meta">Meta</a>
+      <span class="copyleft">©</span> 2024<br />
+      <a href="/colophon">Colophon</a>
     </footer>
   </body>
 </html>
