--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     />
     <link rel="icon" href="/images/favicon.png" />
     <link rel="stylesheet" href="/style/|||||.css" />
+<link rel="me" href="https://github.com/jpesce" />
+<link rel="authorization_endpoint" href="https://indieauth.com/auth">
   </head>
   <body>
     <header>
