content: update projects

--- a/public/index.html
+++ b/public/index.html
@@ -73,38 +73,38 @@
   </grid>
   <grid columns="4" columns-sm="1" gap="8" class="index__posts"><grid-cell >
         <figure>
-        <img loading="lazy" src="240307_noitedeminas/noitedeminas@thumbnail.jpg" alt="ジョタ, 江利川侑介 ＆ Willie (DJ) @ ノースマリンドライブ" /><figcaption>
-              ジョタ, 江利川侑介 ＆ Willie (DJ) @ ノースマリンドライブ (2024) /  Music event in Shibuya
+        <img loading="lazy" src="240307_noitedeminas/noitedeminas@thumbnail.jpg" alt="ジョタ（ミニライブ）, 江利川侑介 &amp; Willie (DJ) @ ノースマリンドライブ" /><figcaption>
+              ジョタ（ミニライブ）, 江利川侑介 &amp; Willie (DJ) @ ノースマリンドライブ (2024) /  Art for music event in Tokyo
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
         <img loading="lazy" src="240216_pxshdr/pxshdr@thumbnail.png" alt="PXSHDR" /><figcaption>
-              PXSHDR (2024) /  Camera image to grid of characters or shapes
+              PXSHDR (2024) /  Program to convert live camera image to grid of characters or shapes
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
         <img loading="lazy" src="231222_gentil35/gentil35@thumbnail.jpg" alt="Gentil 35" /><figcaption>
-              Gentil 35 (2023) /  Poster for a party
+              Gentil 35 (2023) /  Art for a party
             </figcaption></figure>
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
         <img loading="lazy" src="230301_joandrawedding/joandra-wedding@thumbnail.jpg" alt="Wedding site" /><figcaption>
-              Wedding site (2023) /  One-page web app with cart, payment integration and RSVP form
+              Wedding site (2023) /  Web app with cart, payment integration and RSVP form
             </figcaption></figure>
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
         <img loading="lazy" src="230121_strktr/strktr@thumbnail.png" alt="STRKTR" /><figcaption>
-              STRKTR (2023) /  Displaced cirlces probability-based composition generator
+              STRKTR (2023) /  Program to generate probability-based compositions of displaced cirlces
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
         <img loading="lazy" src="221118_gustavobertoniportugal/gustavobertoniportugal-19@thumbnail.jpg" alt="Gustavo Bertoni Portugal mini tour" /><figcaption>
-              Gustavo Bertoni Portugal mini tour (2022) /  Posters for artist&#39;s concerts
+              Gustavo Bertoni Portugal mini tour (2022) /  Series of posters for a tour
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
         <img loading="lazy" src="221013_jayhorsthtomleerichards/jayhorsthtomleerichards@thumbnail.jpg" alt="Jay Horsth, Tom Lee Richards @ A Obra" /><figcaption>
-              Jay Horsth, Tom Lee Richards @ A Obra (2022) /  Concert digital poster
+              Jay Horsth, Tom Lee Richards @ A Obra (2022) /  Art for a concert
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
@@ -114,12 +114,12 @@
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
         <img loading="lazy" src="220422_songbook/songbook@thumbnail.jpg" alt="The Great LaTeX Songbook" /><figcaption>
-              The Great LaTeX Songbook (2022) /  Multi-instrument songbook generator
+              The Great LaTeX Songbook (2022) /  Program to generate songbooks for multiple instruments
             </figcaption></figure>
       </grid-cell><grid-cell span="2" span-sm="row">
         <figure>
         <img loading="lazy" src="220122_jaysolitude/jaysolitude@thumbnail.jpg" alt="Jay Horsth Solitude Tour" /><figcaption>
-              Jay Horsth Solitude Tour (2022) /  Series of iterative posters for artist&#39;s tour
+              Jay Horsth Solitude Tour (2022) /  Series of iterative posters for a tour
             </figcaption></figure>
       </grid-cell><grid-cell >
         <figure>
