feat: improve performance
- Add a cache layer that works by first building files to a cache
  directory and then copying it to the final destination. If a file is
  still fresh in the cache directory, the program will copy it directly
  instead of rebuilding it.
- Add concurrency to the build process

--- a/public/colophon/index.html
+++ b/public/colophon/index.html
@@ -123,12 +123,19 @@ href="https://imagemagick.org/index.php">ImageMagick</a> and <a
 href="https://developers.google.com/speed/webp/docs/cwebp">cwebp</a></td>
 </tr>
 <tr class="even">
+<td label="Module">Cache</td>
+<td label="What it does">Speed up the build process by rebuilding only
+what’s been changed</td>
+<td label="Simpler alternative">Wait longer</td>
+<td label="Implementation in miu">Custom module</td>
+</tr>
+<tr class="odd">
 <td label="Module">Build pipeline</td>
 <td label="What it does">Execute the modules in the right order, to the
 right files and output to the right places</td>
 <td label="Simpler alternative">Execute modules and move files around
 manually</td>
-<td label="Implementation in miu">Custom functions</td>
+<td label="Implementation in miu">Custom module</td>
 </tr>
 </tbody>
 </table>
