content: update index
Rename Arezzo&Co to Azzas2154

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,8 @@
         target="_blank">dots are more connected</a> than we often realize.
       </p>
       <p>
-        I’m currently head of technology at Oficina Reserva (acq. by Arezzo&Co), which I co-founded
+        I’m currently head of technology at Oficina Reserva (acq. by <a
+          href="https://azzas2154.com.br/" target="_blank">Azzas2154</a>), which I co-founded
         in 2015. Before venturing into my own business, I used to do research in the cross section
         of Computer Science and the humanities along with other folks at <a
         href="https://dcc.ufmg.br/" target="_blank">UFMG <sup>Brazil</sup></a>, <a
